@@ -1,10 +1,10 @@
 Package: shiny
 Type: Package
 Title: Web Application Framework for R
-Version: 0.2.3
+Version: 0.2.4
 Date: 2012-11-30
 Author: RStudio, Inc.
-Maintainer: Joe Cheng <joe@rstudio.org>
+Maintainer: Winston Chang <winston@rstudio.com>
 Description: Shiny makes it incredibly easy to build interactive web
         applications with R. Automatic "reactive" binding between
         inputs and outputs and extensive pre-built widgets make it
@@ -14,13 +14,13 @@ License: GPL-3
 Depends: R (>= 2.14.1)
 Imports: stats, tools, utils, datasets, methods, websockets (>= 1.1.6),
         caTools, RJSONIO, xtable, digest
-Suggests: markdown
+Suggests: markdown, Cairo
 URL: https://github.com/rstudio/shiny,
         http://rstudio.github.com/shiny/tutorial
 BugReports: https://github.com/rstudio/shiny/issues
 Collate: 'map.R' 'utils.R' 'tar.R' 'timer.R' 'tags.R' 'cache.R'
         'react.R' 'reactives.R' 'fileupload.R' 'shiny.R'
         'shinywrappers.R' 'shinyui.R' 'slider.R' 'bootstrap.R'
-Packaged: 2012-11-30 17:32:45 UTC; jcheng
+Packaged: 2012-12-17 22:27:41 UTC; winston
 Repository: CRAN
-Date/Publication: 2012-12-01 07:16:17
+Date/Publication: 2012-12-18 15:52:08
