@@ -1,15 +1,15 @@
-217cd4cb0123104683742c931b027e11 *DESCRIPTION
-24d80185ba99e1c094884c70d120ac2b *NAMESPACE
-808fd6798dd49884ea7ad466293dcbc9 *NEWS
+24bffe59bb3a5cabdc0d3d742bc20a3f *DESCRIPTION
+3b94dd496e254cbfe9a472d3e29f5c80 *NAMESPACE
+e64c0641efe14dd48246eaaa01212d90 *NEWS
 82f59ff9444f15e911ed4bfc04afbceb *R/bootstrap.R
 b82da59bd00e8561b7283e1c6e0eea4b *R/cache.R
 cc1a8b9b75dff5ab93b13f542b4e1589 *R/fileupload.R
 d11f6200e20b64fd4e9079b44b4f8aa0 *R/map.R
 30fa03157a53df24963bdc65df9bac61 *R/react.R
 62be7558622c356f9d3867cd982ec09f *R/reactives.R
-28c52b86392c7cb8baab039a146feb4e *R/shiny.R
+ab68e377c702685495657fff46c7d167 *R/shiny.R
 c70b0004c08fc9da8cd995881944a582 *R/shinyui.R
-9ef1a9bbba2fef29ac004025b3aeee7c *R/shinywrappers.R
+c28af0c60e0513e29917fda8c0025817 *R/shinywrappers.R
 daf14a983944013d37a568ec7e664203 *R/slider.R
 436f8298dca92a9d0bc52586331f595d *R/tags.R
 af72d247cbc5f54f1841b3df5ddba354 *R/tar.R
@@ -79,7 +79,7 @@ d69a6e424f6fde86d7769b60b5e8081f *man/pageWithSidebar.Rd
 43c383457dcca02f83ee50f16dc40961 *man/plotOutput.Rd
 db5c1106318832a072fb62e39d8fe6ec *man/radioButtons.Rd
 c529220b7c1ee8af93c48cffbb407993 *man/reactive.Rd
-c07e00fdd62f5585ba339b4e19a298a5 *man/reactivePlot.Rd
+0ac545f36a1fabb6d1c23623111d5959 *man/reactivePlot.Rd
 a593f6694832b1a8ee83edcbb88b3822 *man/reactivePrint.Rd
 15deb6e391830f56cb1626f0d77799ff *man/reactiveTable.Rd
 ca0cdfb44ba4c163e9e363b48b9e0c67 *man/reactiveText.Rd
